добавляет тень в портфолио

--- a/css/style.css
+++ b/css/style.css
@@ -568,6 +568,9 @@ body {
   background-color: var(--accent-text-color);
 }
 
-.portfolio-items .link:hover {
-  background-color: var(--accent-text-color);
+.portfolio-card:hover,
+.portfolio-card:focus {
+  /* background-color: var(--accent-text-color); */
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
